<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/card"
        layout="@layout/result_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/view" />

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignTop="@id/card"
        android:layout_alignBottom="@id/card"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp">

        <ImageView
            android:id="@+id/view_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="right"
            app:srcCompat="@drawable/ic_view"
            app:tint="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/view" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_queue"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/queue"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/queue_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/play_all"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/queue_all"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/queue_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/play_front"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/queue_front"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_artist1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_profile"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/arT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/view_artist"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_artist2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:visibility="gone">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_profile"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/arT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/view_artist"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_artist3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:visibility="gone">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_profile"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/arT3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/view_artist"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/darkener"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_album"
                app:tint="@color/text"
                tools:ignore="InefficientWeight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:text="@string/view_album"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/actions"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/open_in_spotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/darkener">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="Open in Spotify"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/spotify"
                app:tint="@color/text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/darkener">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="Share"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share"
                app:tint="@color/text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>